# kawsay-solver-service

./: .gitignore  Makefile  flake.nix  pyproject.toml
benchmarks/: analyzer.py  client.py  client_fundamental.py  client_structural.py  client_workload.py  generator.py  report.py  runner.py
protos/: problem_definition.proto  problem_definition_pb2.pyi  solution.proto  solution_pb2.py  solution_pb2.pyi  solution_pb2_grpc.py
src/: client.py  problem_definition_pb2.py  problem_definition_pb2_grpc.py  script.py  server.py  solution_pb2.py  solution_pb2.pyi
src/components/: modeler.py  solution_mapper.py
src/protos/: problem_definition_pb2.pyi  solution_pb2_grpc.py
src/services/: timetabling_service.py
src/solver_service/: client.py  client_fundamental.py  client_structural.py  client_workload.py  server.py  telemetry.py
src/solver_service/components/: constraint_builder.py  modeler.py  solution_mapper.py
src/solver_service/constraints/: fundamental.py  preferences.py  structural.py  utils.py  workload.py
src/solver_service/handlers/: base_handler.py  fundamental_handler.py  preference_handler.py  structural_handler.py  workload_handler.py
src/solver_service/protos/: problem_definition_pb2.py  problem_definition_pb2.pyi  solution_pb2.py  solution_pb2_grpc.py
src/solver_service/services/: timetabling_service.py
tests/: conftest.py
tests/constraints/: test_fundamental.py  test_preferences.py  test_structural.py  test_workload.py
