[tool.poetry]
name = "solver-service"
version = "0.1.0"
description = "Timetabling solver gRPC service."
authors = ["Santiago C. Saavedra <zrock_git@zohomail.com>"]
readme = "README.md"
packages = [{include = "solver_service", from = "src"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
grpcio = "^1.73.1"
grpcio-tools = "^1.73.1"
google-api-python-client = "^2.176.0"
ortools = "^9.14.6206"
numpy = "^2.3.1"
psutil = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
